updated code to save plots

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 .Ruserdata
 *.log
 /.Rproj.user
+.Rproj.user/97F692F1/pcs/source-pane.pper
+.Rproj.user/97F692F1/pcs/source-pane.pper
+.Rproj.user/97F692F1/pcs/windowlayoutstate.pper
+.Rproj.user/97F692F1/sources/prop/INDEX
+.Rproj.user/shared/notebooks/paths
