--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 .Rproj.user/97F692F1/pcs/windowlayoutstate.pper
 .Rproj.user/97F692F1/sources/prop/INDEX
 .Rproj.user/shared/notebooks/paths
+.Rhistory
+/.Rproj.user/97F692F1
+/.Rproj.user/shared
