--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,5 @@
 .Rhistory
 .RData
 .Ruserdata
-*.log
-/.Rproj.user
-.Rproj.user/97F692F1/pcs/source-pane.pper
-.Rproj.user/97F692F1/pcs/source-pane.pper
-.Rproj.user/97F692F1/pcs/windowlayoutstate.pper
-.Rproj.user/97F692F1/sources/prop/INDEX
-.Rproj.user/shared/notebooks/paths
-.Rhistory
-/.Rproj.user/97F692F1
-/.Rproj.user/shared
-.Rhistory
-*.pper
-/.Rproj.user
-.Rhistory
+.Rproj.user/
+
